cleaned up projects area to reduce clutter

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <link rel="stylesheet" href="style.css">
   <link href='https://fonts.googleapis.com/css?family=BenchNine:400,700,300|Open+Sans+Condensed:300,400' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-  <title>Danny's Resume</title>
 </head>
 <body class="page resume">
 
@@ -73,12 +72,12 @@
 
     <section class="projects section-container">
       <h3 class="strong">PROJECTS</h3>
-        <li><strong>simplist</strong>: geolocation based peer-to-peer eCommerce platform that enables people to buy and sell things. Team effort and my responsibilities included initial Rails API, geolocator and search bar implementation in AngularJS</li>
-        <li><strong>places/spaces</strong>: web application built to enable users to create a bucket list of destinations they'd like to visit. Solo project built on Sinatra. Implemented Google Maps API, User Authentication, JavaScript and AJAX</li>
-        <li><strong>vacation tracker</strong>: internal tool I developed at Apple to help the resource manager keep track of which employees are off at any given time. Built using HTML/CSS and vanilla JavaScript</li>
-        <li><strong>jQuery shopping list</strong>: shopping list app created using HTML/CSS, jQuery and Vanilla JavaScript</li>
-        <li><strong>snkr quiz</strong>: quiz application testing users on their sneaker knowledge. Provides user with their score and snkrhead rating. Built using HTML/CSS, jQuery and Vanilla JavaScript</li>
-        <li><strong>YouTube clone</strong>: YouTube clone. Implemented YouTube's API and responsive web design. Built using HTML/CSS, jQuery and Vanilla JavaScript </li>
+        <li><strong>simplist</strong>: <br>geolocation based peer-to-peer eCommerce platform that enables people to buy and sell things</li>
+        <li><strong>places/spaces</strong>: <br>web application built to enable users to create a bucket list of destinations they'd like to visit</li>
+        <li><strong>vacation tracker</strong>: <br>internal tool I developed at Apple to help the resource manager keep track of which employees are off at any given time</li>
+        <li><strong>jQuery shopping list</strong>: <br>shopping list app allowing users to dynamically add, remove, update and move around items</li>
+        <li><strong>snkr quiz</strong>: <br>quiz application testing users on their sneaker knowledge providing a score and snkrhead rating upon completion</li>
+        <li><strong>YouTube clone</strong>: <br>YouTube clone implementing YouTube's API and responsive web design</li>
     </section>
 
   </section>
