add margin-bottom to list itmes in projects to create more space

--- a/index.html
+++ b/index.html
@@ -72,11 +72,11 @@
 
     <section class="projects section-container">
       <h3 class="strong">PROJECTS</h3>
-        <li><strong>simplist</strong>: <br>geolocation based peer-to-peer eCommerce platform that enables people to buy and sell things</li>
-        <li><strong>places/spaces</strong>: <br>web application built to enable users to create a bucket list of destinations they'd like to visit</li>
-        <li><strong>vacation tracker</strong>: <br>internal tool I developed at Apple to help the resource manager keep track of which employees are off at any given time</li>
-        <li><strong>jQuery shopping list</strong>: <br>shopping list app allowing users to dynamically add, remove, update and move around items</li>
-        <li><strong>snkr quiz</strong>: <br>quiz application testing users on their sneaker knowledge providing a score and snkrhead rating upon completion</li>
+        <li class="bottom-space"><strong>simplist</strong>: <br>geolocation based peer-to-peer eCommerce platform that enables people to buy and sell things</li>
+        <li class="bottom-space"><strong>places/spaces</strong>: <br>web application built to enable users to create a bucket list of destinations they'd like to visit</li>
+        <li class="bottom-space"><strong>vacation tracker</strong>: <br>internal tool I developed at Apple to help the resource manager keep track of which employees are off at any given time</li>
+        <li class="bottom-space"><strong>jQuery shopping list</strong>: <br>shopping list app allowing users to dynamically add, remove, update and move around items</li>
+        <li class="bottom-space"><strong>snkr quiz</strong>: <br>quiz application testing users on their sneaker knowledge providing a score and snkrhead rating upon completion</li>
         <li><strong>YouTube clone</strong>: <br>YouTube clone implementing YouTube's API and responsive web design</li>
     </section>
 
