added margin-bottom to list items to make easier to read in experience section

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 
     <section class="skills section-container">
       <h3 class="strong">PROGRAMMING SKILLS</h3>
-        <li><span class="strong">LANGUAGES</span>: HTML, CSS, JavaScript</li>
-        <li><span class="strong">FRAMEWORKS/LIBRARIES</span>: jQuery/AJAX,</li>
-        <li><span class="strong">KNOWLEDGE</span>: AngularJS, Git, JSON, Agile Methodologies, Responsive Web Design</li>
+        <li class="bullet"><span class="strong">LANGUAGES</span>: HTML, CSS, JavaScript</li>
+        <li class="bullet"><span class="strong">FRAMEWORKS/LIBRARIES</span>: jQuery/AJAX,</li>
+        <li class="bullet"><span class="strong">KNOWLEDGE</span>: AngularJS, Git, JSON, Agile Methodologies, Responsive Web Design</li>
     </section>
 
     <hr>
@@ -35,18 +35,18 @@
       <h3 class="strong">EXPERIENCE</h3>
         <li><span class="strong">SOFTWARE QA ENGINEER // APPLE INC.</span></li>
         <em>December 2014 - present - Sunnyvale, CA</em>
-          <li>- Perform testing efforts on multiple projects across several browsers, operating systems and mobile devices</li>
-          <li>- Write detailed and easy to understand bug reports following internal standard guidelines</li>
-          <li>- Collaborate with team members to ensure testing is executed properly and efficiently</li>
-          <li>- Communicate risk to QA Leads as needed to update test cases for optimal execution</li>
-          <li>- Evaluate code changes to determine appropriate test strategies</li>
-          <li>- Thoroughly test, verify and approve bug fixes</li><br>
+          <li class="bullet">- Perform testing efforts on multiple projects across several browsers, operating systems and mobile devices</li>
+          <li class="bullet">- Write detailed and easy to understand bug reports following internal standard guidelines</li>
+          <li class="bullet">- Collaborate with team members to ensure testing is executed properly and efficiently</li>
+          <li class="bullet">- Communicate risk to QA Leads as needed to update test cases for optimal execution</li>
+          <li class="bullet">- Evaluate code changes to determine appropriate test strategies</li>
+          <li class="bullet">- Thoroughly test, verify and approve bug fixes</li><br>
         <li><span class="strong">WEB DEVELOPER APPRENTICE // DEV BOOTCAMP</span></li>
         <em>June 2014 - November 2014 - San Francisco, CA</em>
-          <li>- Immersive web development bootcamp focusing on Ruby on Rails, JavaScript and best development practices</li>
-          <li>- Over 1200+ hours spent coding on team projects, solo challenges and pair programming sessions</li>
-          <li>- Gained ability to learn new skills and concepts in an accelerated environment</li>
-          <li>- Problem solving, code optimization and building applications from the ground up</li><br>
+          <li class="bullet">- Immersive web development bootcamp focusing on Ruby on Rails, JavaScript and best development practices</li>
+          <li class="bullet">- Over 1200+ hours spent coding on team projects, solo challenges and pair programming sessions</li>
+          <li class="bullet">- Gained ability to learn new skills and concepts in an accelerated environment</li>
+          <li class="bullet">- Problem solving, code optimization and building applications from the ground up</li><br>
        <li><span class="strong">LOAN COUNSELOR // RUSHMORE LOAN MANAGEMENT SERVICES</span></li>
         <em>November 2013 - June, 2014 - Irvine, CA</em>                
           <li>- Assisted clients in resolving their account(s) by ensuring mortgage payments were created on time</li><br> 
