fixed date for rushmore

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <li class="bullet">- Gained ability to learn new skills and concepts in an accelerated environment</li>
           <li class="bullet">- Problem solving, code optimization and building applications from the ground up</li><br>
        <li><span class="strong">LOAN COUNSELOR // RUSHMORE LOAN MANAGEMENT SERVICES</span></li>
-        <em>November 2013 - June, 2014 - Irvine, CA</em>                
+        <em>November 2012 - December 2013 - Irvine, CA</em>                
           <li>- Assisted clients in resolving their account(s) by ensuring mortgage payments were created on time</li><br> 
     </section>
     
