added more content to projects section and adjusted some styling

--- a/index.html
+++ b/index.html
@@ -103,13 +103,14 @@
             <section class="projects section-container">
                 <h3 class="strong">PROJECTS</h3>
                 <ul>
-                    <li class="bullet"><strong>simplist</strong>: geolocation based peer-to-peer eCommerce platform that enables people to buy and sell things</li>
-                    <li class="bullet"><strong>vacation tracker</strong>: internal tool developed at Apple to help the resource manager keep track of employees time off</li>
-                    <li class="bullet"><strong>Omnifood</strong>: landing page for Omnifood using pure HTML and CSS</li>
-                    <li class="bullet"><strong>Beer Me</strong>: Instagram mock-up using Instagram's API allowing user to see the latest posts and search using hasgtags</li>
-                    <li class="bullet"><strong>YouTube clone</strong>: YouTube clone implementing YouTube's API and responsive web design</li>
-                    <li class="bullet"><strong>snkr quiz</strong>: quiz application testing users on their sneaker knowledge providing a score and snkrhead rating upon completion</li>
-                    <li class="bullet"><strong>jQuery shopping list</strong>: shopping list app allowing users to dynamically add, remove, update and move around items</li>
+                    <li class="bullet"><strong>simplist</strong>: Geo-location based peer-to-peer eCommerce platform that enables people to buy and sell their items. Technologies used: AngularJS, HTML, CSS, JavaScript, Bootstrap, Stripe API, Google Maps API </li>
+                    <li class="bullet"><strong>hashtagging</strong>: Geo-location photo app that shows all current popular Instagram posts and allows a user to search media by hashtag or location. Technologies used: HTML, CSS, JavaScript, jQuery, Instagram API, Google Maps API</li>
+                    <li class="bullet"><strong>youtube clone</strong>: A YouTube search engine that allows users to search videos on YouTube. Technologies used: HTML, CSS, JavaScript, jQuery, YouTube API, Responsive Design</li>
+                    <li class="bullet"><strong>beer me</strong>: Geo-location based brewery app that allows a user to search for breweries in the users current location or by a users zip-code. Technologies used: HTML, CSS, JavaScript, jQuery, BreweryDB API, Google Maps API</li>
+                    <li class="bullet"><strong>vacation tracker</strong>: Internal tool developed at Apple to help the resource manager keep track of employees time off. Technologies used: HTML, CSS, JavaScript, Bootstrap</li>
+                    <li class="bullet"><strong>snkr quiz</strong>: Quiz app designed to test users on their sneaker knowledge and provide the user with a SNKRHEAD rating. Technologies used: HTML, CSS, JavaScript, jQuery</li>
+                    <li class="bullet"><strong>jQuery shopping list</strong>: Shopping list app that allows a user add/remove items to a shopping list, check items off the list, rearrange items, and clear the list. Technologies used: HTML, CSS, JavaScript, jQuery</li>
+                    <li class="bullet"><strong>omnifood</strong>: landing page for Omnifood. Technologies used: HTML and CSS</li>
                 </ul>
             </section>
         </div>
